Checklist and response mapped